Add Photo Profile

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,7 @@
             <!-- Portfolio Promo Card -->
             <div class="bg-white/5 rounded-lg p-5 mb-4 border border-gray-800 hover:border-gray-700 transition-all duration-300">
                 <div class="flex flex-col items-center text-center mb-4">
-                    <div class="w-12 h-12 bg-white rounded-full flex items-center justify-center mb-3">
-                        <i data-lucide="user" class="w-6 h-6 text-black"></i>
-                    </div>
+                    <img src="/img/hilmi4.jpg" alt="Profile Picture" class="w-12 h-12 rounded-full mb-3">
                     <h3 class="font-bold text-white text-sm mb-1">Built by Hilmi</h3>
                     <p class="text-xs text-gray-400">Full Stack Developer</p>
                 </div>
